--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bullmq": "^5.47.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "form-data": "^4.0.2",
     "install": "^0.13.0",
+    "ioredis": "^5.6.0",
     "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.1.9",
