--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "type": "commonjs",
   "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "concurrently \"nodemon server.js\" \"nodemon bullmq/workers/image.worker.js\"",
+    "server": "nodemon server.js",
+    "worker": "nodemon bullmq/worker/image.worker.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bullmq": "^5.47.1",
     "cors": "^2.8.5",
+    "deepai": "^1.0.23",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "form-data": "^4.0.2",
@@ -20,9 +23,12 @@
     "ioredis": "^5.6.0",
     "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
-    "nodemon": "^3.1.9",
     "npm": "^11.2.0",
     "python-shell": "^5.0.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2",
+    "nodemon": "^3.1.9"
   }
 }
